# LumensalisCPLib

./: .gitignore  LICENSE.txt  pylintrc.toml
lib/: pyproject.toml
lib/LCPF_Examples/: Panel.py
lib/LumenTest/: MainStub.py  RefreshTest.py
lib/LumensalisCP/: AutoStart.py  CPTyping.py  Debug.py  IOContext.py  ImportProfiler.py  Initialize.py  Inputs.py  Interactable.py  InteractableKWDS.py  InteractableKWDS.pyi  Outputs.py  Tunable.py  Tunable.pyi  TunableKWDS.py  TunableKWDS.pyi  Tunables.py  Units.py  _pseudoTyping.py  common.notpyi  common.py  common.pyi  commonCP.py  commonCPWifi.py  commonPreManager.py
lib/LumensalisCP/Audio/: Audio.py  Effect.py  __init__.py
lib/LumensalisCP/Behaviors/: Actor.py  Behavior.py  Motion.py  Rotation.py  _common.py
lib/LumensalisCP/Bench/: GCSimpleBench.py  GCSimpleBenchTests.py  WriteScope.py  fancyled.py  simpleCommon.py
lib/LumensalisCP/CPTyping/: GenericT.py  __init__.py  _pseudoTyping.py
lib/LumensalisCP/Controllers/: Config.py  ConfigurableBase.py  Identity.py
lib/LumensalisCP/Demo/: DemoBase.py  DemoCommon.py
lib/LumensalisCP/EZDisplay/: EZDisplayBase.py
lib/LumensalisCP/Eval/: Evaluatable.notpyi  Evaluatable.py  Evaluatable.pyi  EvaluationContext.py  ExpressionTerm.py  Expressions.py  Terms.py  __init__.py  _common.py  common.py  common.pyi
lib/LumensalisCP/Gadgets/: IrRemote.py  Servos.py
lib/LumensalisCP/HTTP/: BasicServer.py  BasicServerRL.py  BasicWebsocketClient.py  ControlVars.py  ControlVarsRL.py  WebsocketSession.py  WebsocketsRL.py  _httpBits.py
lib/LumensalisCP/I2C/: Factory.py  I2CDevice.py  I2CFactory.py  common.py
lib/LumensalisCP/Identity/: Local.py  Local.pyi  Proxy.py
lib/LumensalisCP/Interactable/: Group.py  Interactable.py  InteractableKWDS.py  InteractableKWDS.pyi
lib/LumensalisCP/Lights/: DMXManager.py  Groups.nopyi  Groups.py  Groups.pyi  LCP_StupidArtnetServer.py  Light.py  Monochrome.py  NeoPixels.py  Pattern.py  Patterns.py  ProxyLights.py  RGB.py  TestPatterns.py  TestPatternsRL.py  Values.nopyi  Values.py  Values.pyi  _common.py
lib/LumensalisCP/Main/: ControlVariables.py  Dependents.py  Dependents.pyi  Expressions.py  Helpers.py  (+31 more)
lib/TerrainTronics/: D1MiniBoardBase.py  Factory.nopyi  Factory.py  Factory.pyi
(+224 files in other folders)
